--- a/css/fonts.css
+++ b/css/fonts.css
@@ -108,3 +108,11 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Yandex Sans';
+    src: url('../fonts/YandexSansText-Medium.ttf') format('woff2');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
