--- a/css/style.css
+++ b/css/style.css
@@ -6227,12 +6227,20 @@ hr.white {
   }
 }
 
+
+
+
+
 /* 1. Убираем системный тап‑хайлайт */
 * {
   -webkit-tap-highlight-color: transparent;
 }
 
 /* Доработка сайта */
+
+.no-scroll {
+  overflow: hidden;
+}
 
 /* Страница product.html */
 
@@ -6280,11 +6288,26 @@ hr.white {
 }
 
 .swiper-main {
-  width: 100%;  
+  width: 100%;
   max-width: 655px;
-  margin: 0 auto;    
-  overflow-x: hidden;
+  margin: 0 auto;
   position: relative;
+  overflow: hidden;
+}
+
+.main-images-swiper .swiper-slide {
+  width: 100%;
+  max-width: 655px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  aspect-ratio: 1 / 1; 
+}
+
+.main-images-swiper img {
+  cursor: pointer;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
 
 .product-item-badge {
@@ -6333,10 +6356,9 @@ hr.white {
 }
   
 .swiper-thumbs .swiper-slide {
-  max-width: 217px;
-  max-height: 217px;
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1; 
+  max-width: 217px;
   opacity: 0.5;
   cursor: pointer;
   border-radius: 2px;
@@ -6385,6 +6407,162 @@ hr.white {
 .swiper-pagination-bullet-active {
   background-color: #CFA567 !important;
 }
+
+/* Модальное окно для просмотра изображений товара */
+
+.fullscreen-modal {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw; height: 100vh;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s ease;
+}
+
+.fullscreen-modal.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.fullscreen-modal.closing {
+  visibility: visible;
+}
+
+.fullscreen-overlay {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+}
+.fullscreen-content {
+  position: relative;
+  width: 100%; 
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.swiper-fullscreen {
+  width: 90vw;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.swiper-fullscreen .swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper-fullscreen .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.modal-close {
+  position: absolute;
+  top: 20px; 
+  right: 30px;
+  font-size: 2rem;
+  color: #fff;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.modal-close-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.modal-close svg path {
+  transition: stroke 0.3s ease;
+}
+
+.modal-close:hover svg path {
+  stroke: #CFA567;
+}
+
+.fullscreen-content {
+  position: relative; 
+}
+
+.swiper-fullscreen .swiper-button-prev {
+  left: 50px;   
+}
+
+.swiper-fullscreen .swiper-button-next {
+  right: 50px; 
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  background-image: none !important;  
+}
+
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 40px;        
+  color: #fff !important;  
+  transition: all 0.3s ease;
+}
+
+
+/* Адаптив модального окна */
+
+@media (hover: hover) {
+  .swiper-button-prev:hover::after,
+  .swiper-button-next:hover::after {
+    color: #CFA567 !important;  
+  }
+
+  .modal-close:hover svg path {
+    stroke: #CFA567;
+  }
+}
+
+@media (max-width: 700px) {
+  .swiper-fullscreen .swiper-button-prev {
+    left: 20px;   
+  }
+
+  .swiper-fullscreen .swiper-button-next {
+    right: 20px;  
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 30px;        
+  }
+
+  .modal-close {
+    top: 20px; 
+    right: 20px;
+  }
+
+  .modal-close-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+
 
 .product-title {
   margin-bottom: 0px;
@@ -6869,6 +7047,10 @@ p.product-item-price {
   scroll-behavior: smooth;
 }
 
+.product-desc-card {
+  position: relative;
+}
+
 .product-desc-card:first-child {
   border-top: 1px solid #C5C5C5;
 }
@@ -6880,6 +7062,17 @@ p.product-item-price {
   padding: 20px 0px;
   position: relative;
   border-bottom: 1px solid #C5C5C5;
+}
+
+.click-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 77px;
+  cursor: pointer;
+  z-index: 1000;
 }
 
 
