--- a/css/style.css
+++ b/css/style.css
@@ -6316,11 +6316,38 @@ hr.white {
   left: 0;
   z-index: 2;
   background-color: #CFA567;
-  padding: 20px;
+  padding: 20px 0px;
   border-bottom-right-radius: 26px;
+  max-width: 256px;
+  min-width: 256px;
+  width: 100%;
+  text-align: center;
 }
 
 .product-item-badge p {
+  color: #F9F7F3;
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  
+  font-weight: 600;
+}
+
+.product-item-badge-sale {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: #CA0603;
+  padding: 20px 0px;
+  max-width: 256px;
+  min-width: 256px;
+  width: 100%;
+  text-align: center;
+  border-bottom-right-radius: 26px;
+}
+
+.product-item-badge-sale p {
   color: #F9F7F3;
   text-transform: uppercase;
   font-family: 'Open Sans', sans-serif;
@@ -6624,8 +6651,13 @@ p.product-article {
   color: #939393;
 }
 
+.in-stocks {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .in-stock {
-  padding-top: 50px;
   display: flex;
   gap: 6px;
 }
@@ -6642,6 +6674,35 @@ p.product-article {
 
 p.product-item-price {
   margin-bottom: 0;
+}
+
+.product-item-discount {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 16px;
+}
+
+.product-item-discount p {
+  margin: 0px;
+}
+
+.product-item-discount-price {
+  font-family: 'Prata', serif;
+  font-size: 20px;
+  color: #939393;
+  text-decoration: line-through;
+}
+
+.product-item-discount-banner {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: #F9F7F3;
+  background-color: #CFA567;
+  padding: 9px 15px;
+  border-radius: 39px;
 }
 
 .product-item-price {
@@ -6687,13 +6748,100 @@ p.product-item-price {
   color: #CFA567;   
   text-transform: uppercase;
   font-size: 20px;
-  padding: 21px 10px 21px 10px;
+  padding: 0px 10px 0px 10px;
   transition: background-color 0.3s ease;
   border: 1px solid #CFA567;
+  text-align: center;
 }
 
 .buy-now-btn:hover {
   background-color: rgba(245, 166, 35, 0.12);
+}
+
+.item-quantity-selector {
+  display: inline-flex;
+  align-items: center;
+  border: 1px solid #CFA567;
+  border-radius: 9999px;
+  overflow: hidden;
+  font-family: sans-serif;
+  max-height: 67px;
+  width: 100%;
+  display: none; 
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  pointer-events: none;
+}
+
+.item-quantity-selector.show {
+  display: inline-flex;
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: auto;
+}
+
+.item-quantity-btn {
+  width: 100px;
+  height: 71px;
+  border: none;
+  background: none;
+  font-size: 24px;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.item-quantity-btn svg {
+  vertical-align: middle;
+}
+
+.item-quantity-btn:hover {
+  background-color: #CFA56720;
+  color: #CFA567;
+}
+
+.plus-icon,
+.minus-icon {
+  width: 17px;
+  height: 17px;
+}
+
+.item-quantity-value {
+  width: 100%;
+  height: 71px;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #CFA567;
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  user-select: none;
+  transition: color 0.3s ease;
+  border-left: 1px solid #CFA567;
+  border-right: 1px solid #CFA567;
+  padding: 0; 
+}
+
+@media (max-width: 1280px) {
+  .item-quantity-selector {
+    max-height: 46px;
+  }
+
+  .item-quantity-value {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1030px) {
+  .item-quantity-value {
+    font-size: 16px;
+  }
 }
 
 .item-other-buttons {
@@ -6760,7 +6908,7 @@ p.product-item-price {
   }
 }
 
-@media (max-width: 1550px) {
+@media (max-width: 1590px) {
   .product-item {
     padding: 0px;
   }
@@ -6770,7 +6918,8 @@ p.product-item-price {
   .product-item-badge p,
   .product-reviews-text,
   .add-to-favorites-btn,
-  .question-btn {
+  .question-btn,
+  .product-item-badge-sale p {
     font-size: 16px;
   }
 
@@ -6780,11 +6929,18 @@ p.product-item-price {
   }
 
   .product-item-badge {
-    padding: 13.5px 21px;
+    padding: 13.5px 0px;
   }
 
   .product-title {
     font-size: 32px;
+  }
+
+  .product-item-badge-sale,
+  .product-item-badge {
+    max-width: 213px;
+    min-width: 213px;
+    padding: 13.5px 0px;
   }
 
   .product-reviews-container-right-side img {
@@ -6807,6 +6963,15 @@ p.product-item-price {
     width: 25px;
     height: 25px;
   }
+
+  .product-item-discount-price,
+  .product-item-discount-banner {
+    font-size: 16px;
+  }
+
+  .product-item-discount {
+    gap: 10px;
+  }
 }
 
 @media (max-width: 1120px) {
@@ -6814,6 +6979,7 @@ p.product-item-price {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
+    margin-bottom: 24px;
   }
 
   .product-reviews-container {
@@ -6856,6 +7022,23 @@ p.product-item-price {
     position: relative;
     top: 0px;
   }
+
+  .product-item-discount-price,
+  .product-item-discount-banner {
+    font-size: 14px;
+  }
+
+  .product-item-discount {
+    gap: 6px;
+  }
+
+  .product-item-discount-banner {
+    padding: 2px 9px;
+  }
+
+  .product-item-price {
+    margin-top: 6px;
+  }
 }
 
 @media (max-width: 639px) {
@@ -6887,6 +7070,26 @@ p.product-item-price {
   .swiper-pagination-bullet {
     width: 10px !important;
     height: 10px !important;
+  }
+
+  .product-item-badge {
+    max-width: 156px;
+    min-width: 156px;
+    padding: 10px 0px;
+  }
+
+  .product-item-badge-sale {
+    max-width: 156px;
+    min-width: 156px;
+    padding: 10px 2px;
+  }
+
+  .product-item-badge p,
+  .product-reviews-text,
+  .add-to-favorites-btn,
+  .question-btn,
+  .product-item-badge-sale p {
+    font-size: 12px;
   }
 }
 
@@ -6974,6 +7177,36 @@ p.product-item-price {
   font-weight: 700;
 }
 
+.select-configuration-card-discount {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 16px;
+}
+
+.select-configuration-card-discount p {
+  margin: 0px;
+}
+
+.select-configuration-card-discount-price {
+  font-family: 'Prata', serif;
+  font-size: 16px;
+  color: #939393;
+  text-decoration: line-through;
+  white-space: nowrap;
+}
+
+.select-configuration-card-discount-banner {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  color: #F9F7F3;
+  background-color: #CFA567;
+  padding: 4px 8px;
+  border-radius: 39px;
+  white-space: nowrap;
+}
+
 .select-configuration-card-price p {
   font-family: 'Prata', serif;
   font-weight: 500;
@@ -6998,6 +7231,17 @@ p.product-item-price {
 
   .select-configuration-card-img img {
     max-width: 170px;
+  }
+}
+
+@media (max-width: 1590px) {
+  .select-configuration-card-discount-banner,
+  .select-configuration-card-discount-price {
+    font-size: 12px;
+  }
+
+  .select-configuration-card-discount {
+    gap: 8px;
   }
 }
 
@@ -8297,6 +8541,7 @@ p.footer-navigation-title {
   color: #737373;
   font-size: 18px;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .payment-methods {
@@ -8386,8 +8631,8 @@ p.footer-copyright-text {
   }
 
   .yandex-icon {
-    width: 48px;
-    height: 48px;
+    min-width: 48px;
+    min-height: 48px;
   }
 
   .footer-logo {
@@ -8767,7 +9012,7 @@ p.cart-item-article {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #000000;
+  color: #CFA567;
   text-align: center;
   font-weight: 600;
   padding: 0px 24px;
@@ -8780,6 +9025,41 @@ p.cart-item-article {
 
 p.cart-item-price-value {
   margin-top: 0px;
+}
+
+.cart-item-price-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.cart-item-discount {
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 16px;
+}
+
+.cart-item-discount p {
+  margin: 0px;
+}
+
+.cart-item-discount-price  {
+  font-family: 'Prata', serif;
+  font-size: 16px;
+  color: #939393;
+  text-decoration: line-through;
+}
+
+.cart-item-discount-banner {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  color: #F9F7F3;
+  background-color: #CFA567;
+  padding: 4px 8px;
+  border-radius: 39px;
 }
 
 .cart-item-price-value {
@@ -9357,6 +9637,19 @@ p.cart-form-title {
 
   .cart-form-link {
     font-size: 16px;
+  }
+
+  .cart-item-discount-price,
+  .cart-item-discount-banner  {
+    font-size: 12px;
+  }
+  
+  .cart-item-discount {
+    gap: 6px;
+  }
+
+  .cart-item-discount {
+    margin-bottom: 6px;
   }
 }
 
